# eQute

./: CMakeLists.txt  LICENSE  README
example/: CMakeLists.txt  application.cpp  application.h  applicationThread.cpp  applicationThread.h  channel.cpp  channel.h  channel.hpp  contextCreator.cpp  contextCreator.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pipe.hpp  window.cpp  window.h  window.hpp
hello/: CMakeLists.txt  application.cpp  applicationThread.cpp  applicationThread.h  channel.cpp  channel.h  contextCreator.cpp  contextCreator.h  eqQtHello.sln  eqQtHello.vcproj  eqQtHello.vcproj.vspscc  main.cpp  mainwindow.h  window.cpp  window.h
include/: qtEventHandler.h  qtGLContextCreator.h  qtGLContextRequestEvent.h  qtGLWidget.h  qtMainWindow.h  qtWindow.h  qtWindowListener.h
include/eQute/: application.hpp  pimpl.hpp
src/: CMakeLists.txt  application.cpp  application.hpp  eqShutdownEvent.cpp  eqShutdownEvent.h  factory.cpp  pipe.hpp  qtEventHandler.cpp  qtEventHandler.h  qtGLContextCreator.cpp  qtGLContextCreator.h  qtGLContextRequestEvent.cpp  qtGLContextRequestEvent.h  qtGLWidget.cpp  qtGLWidget.h  qtMainWindow.cpp  qtMainWindow.h  qtWindow.cpp  qtWindow.h  qtWindowListener.h  window.cpp  window.hpp
